helm/cluster-policies/tests/values.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Value
metadata:
  name: values
namespaceSelector:
  - name: client-a
    labels:
      iacdemo.io/tenant: client-a
